--- a/cv.html
+++ b/cv.html
@@ -3,9 +3,21 @@ layout: default
 title: CV
 ---
 
-<h1>Curriculum Vitae</h1>
+<h1 style="text-align: center;">Curriculum Vitae</h1>
 
-<iframe src="{{ '/assets/public_cv.pdf' | relative_url }}" width="100%" height="1000px" style="border: none;">
-    This browser does not support PDFs. Please download the PDF to view it: 
-    <a href="{{ '/assets/public_cv.pdf' | relative_url }}">Download CV</a>.
-</iframe>
+<!-- Download Button -->
+<div style="text-align: center; margin: 20px 0;">
+  <a href="{{ '/assets/public_cv.pdf' | relative_url }}" download class="button" style="padding: 10px 20px; background-color: #007ACC; color: white; text-decoration: none; border-radius: 5px;">
+    ⬇ Download PDF
+  </a>
+</div>
+
+<!-- Embedded PDF -->
+<div style="display: flex; justify-content: center;">
+  <iframe src="{{ '/assets/public_cv.pdf' | relative_url }}"
+          width="80%"
+          height="700px"
+          style="border: 1px solid #ccc; border-radius: 8px;">
+    Your browser does not support PDFs. <a href="{{ '/assets/public_cv.pdf' | relative_url }}">Download the PDF</a>.
+  </iframe>
+</div>
