--- a/cv.html
+++ b/cv.html
@@ -3,6 +3,13 @@ layout: default
 title: CV
 ---
 
+<!-- Custom Top Navigation -->
+<div style="text-align: right; margin-bottom: 20px;">
+  <a href="/" style="margin-right: 15px;">Home</a>
+  <a href="/research.html" style="margin-right: 15px;">Research</a>
+  <a href="/cv.html" style="margin-right: 15px;">CV</a>
+</div>
+
 <h1 style="text-align: center;">Curriculum Vitae</h1>
 
 <!-- Download Button -->
