Comment out PDF iframe in cv.html

--- a/cv.html
+++ b/cv.html
@@ -20,11 +20,11 @@ title: CV
 </div>
 
 <!-- Embedded PDF -->
-<div style="display: flex; justify-content: center;">
+<!-- <div style="display: flex; justify-content: center;">
   <iframe src="{{ '/assets/public_cv.pdf' | relative_url }}"
           width="90%"
           height="550px"
           style="border: 1px solid #ccc; border-radius: 8px;">
     Your browser does not support PDFs. <a href="{{ '/assets/public_cv.pdf' | relative_url }}">Download the PDF</a>.
   </iframe>
-</div>
+</div>  -->
